Cap the cellular signal strength level to be between 0 and 4 (both inclusive).

Bug: 835701
Change-Id: I93f2aeed4bd615e5380f6d877479df0a46367f3d
Reviewed-on: https://chromium-review.googlesource.com/1031172
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Reviewed-by: Helen Li <xunjieli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554167}
Former-commit-id: 7ceb20aa2d291781ab6b0c9a2b0c3a2f44cf0581