net/android/cellular_signal_strength.cc
@@ -34,10 +34,18 @@ base::Optional<int32_t> GetSignalStrengthLevel() {
       Java_AndroidCellularSignalStrength_getSignalStrengthLevel(
           base::android::AttachCurrentThread());
   if (signal_strength_level == ERROR_NOT_SUPPORTED)
-    return base::Optional<int32_t>();
+    return base::nullopt;
 
-  DCHECK_LE(0, signal_strength_level);
-  DCHECK_GE(4, signal_strength_level);
+  // |signal_strength_level| is expected to be between 0 and 4 (both inclusive).
+  // See
+  // https://developer.android.com/reference/android/telephony/SignalStrength.html#getLevel().
+  // On some devices, |signal_strength_level| may have a value outside this
+  // range (e.g., see https://crbug.com/835701). For such devices, cap the value
+  // to be between 0 and 4.
+  if (signal_strength_level < 0)
+    return 0;
+  if (signal_strength_level > 4)
+    return 4;
 
   return signal_strength_level;
 }
