net/android/cellular_signal_strength.h
@@ -19,7 +19,9 @@ namespace cellular_signal_strength {
 
 // Returns the signal strength level (between 0 and 4, both inclusive) of the
 // currently registered cellular connection. If the value is unavailable, an
-// empty value is returned.
+// empty value is returned. If the signal strength value returned by platform
+// API is less than 0, this method returns 0. If the platform API returns a
+// value larger than 4, then this method returns 4.
 NET_EXPORT_PRIVATE base::Optional<int32_t> GetSignalStrengthLevel();
 
 }  // namespace cellular_signal_strength
